primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Campaign/fields/Is_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Is_Portfolio__c</fullName>
    <label>Is Portfolio</label>
    <description>Checkbox to identify this Campaign as a Portfolio for agent-assisted marketing. Enables portfolio-specific features and views.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>