primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Campaign/fields/Portfolio_Owner__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Owner__c</fullName>
    <label>Portfolio Owner</label>
    <description>The primary marketing user responsible for this portfolio. Different from Campaign Owner - this is the hands-on portfolio manager.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Owned Portfolios</relationshipLabel>
    <relationshipName>Owned_Portfolios</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>