primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Campaign/fields/Portfolio_Type__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Type__c</fullName>
    <label>Portfolio Type</label>
    <description>Categorizes the campaign as a marketing portfolio type for agent-assisted marketing.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VIP Relationships</fullName>
            </value>
            <value>
                <fullName>Retention &amp; Winback</fullName>
            </value>
            <value>
                <fullName>New Customer Nurture</fullName>
            </value>
            <value>
                <fullName>Service Recovery</fullName>
            </value>
            <value>
                <fullName>Meaningful Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>